Fix ugly elo change on iphone

--- a/client/styles/games.scss
+++ b/client/styles/games.scss
@@ -1,5 +1,6 @@
 .score {
-  margin-left: 2.5rem;
+  font-size: 2.5rem;
+  margin-left: 0.5rem;
 }
 
 .game-inprogress {
